--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h2>Aceita entrar numa aventura comigo?</h2>
 
-        <a href="https://www.youtube.com/watch?v=7xwyO9MbT0U" target="_self"><button id="sim">Sim</button></a>
+        <a href="https://youtu.be/oooXooHspAk?si=uL9TIptj_MFb6ObB" target="_self"><button id="sim">Sim</button></a>
         <button onmouseover="fuja()" id="nao">Não</button>
     </div>
 
